@@ -31,15 +31,19 @@
 
 #include <assert.h>
 #include <ctype.h>
-#include <dirent.h>
 #include <fcntl.h>
 #include <limits.h>
 #include <string.h>
-#include <sys/ioctl.h>
 #include <sys/stat.h>
-#include <sys/time.h>
 #include <sys/types.h>
+
+#ifndef _WIN32
+#include <dirent.h>
+#include <sys/ioctl.h>
+#include <sys/time.h>
 #include <unistd.h>
+#endif
+
 #define SockError(i)    Tcl_PosixError((i))
 
 #ifdef __sun
